--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.2",
     "typescript": "5.0.4"
   }
 }
